--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Recall - Knowledge-First Collaboration Platform" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" href="/recalljpg.jpg" type="image/jpeg" />
+    <link rel="shortcut icon" href="/recalljpg.jpg" type="image/jpeg" />
     <title>Recall</title>
   </head>
   <body>
