--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,15 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#9333ea" />
-    <meta name="description" content="Recall - Team Decision Tracker & Project Management" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="Recall" />
+    <meta name="description" content="Knowledgr - The Knowledge-First Collaboration Platform" />
+    <meta name="apple-mobile-web-app-title" content="Knowledgr" />
     <link rel="icon" href="/recalljpg.jpg" type="image/jpeg" />
     <link rel="shortcut icon" href="/recalljpg.jpg" type="image/jpeg" />
     <link rel="apple-touch-icon" href="/recalljpg.jpg" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Recall - Team Decision Tracker</title>
+    <title>Knowledgr - Knowledge-First Collaboration</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
