--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,10 +10,12 @@
     <link rel="shortcut icon" href="/recalljpg.jpg" type="image/jpeg" />
     <link rel="apple-touch-icon" href="/recalljpg.jpg" />
     <link rel="manifest" href="/manifest.json" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <title>Knowledgr - Knowledge-First Collaboration</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
