--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,14 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <meta name="theme-color" content="#9333ea" />
-    <meta name="description" content="Knowledgr - The Knowledge-First Collaboration Platform" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#161012" />
+    <meta name="description" content="Knoledgr connects conversations, decisions, projects, and documents so teams keep context and move faster." />
+    <meta name="robots" content="index,follow" />
+    <meta name="author" content="Knoledgr" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Knoledgr" />
+    <meta property="og:title" content="Knoledgr | Knowledge-First Collaboration Platform" />
+    <meta property="og:description" content="Knoledgr connects conversations, decisions, projects, and documents so teams keep context and move faster." />
+    <meta property="og:image" content="/logo.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Knoledgr | Knowledge-First Collaboration Platform" />
+    <meta name="twitter:description" content="Knoledgr connects conversations, decisions, projects, and documents so teams keep context and move faster." />
+    <meta name="twitter:image" content="/logo.png" />
     <meta name="apple-mobile-web-app-title" content="Knowledgr" />
     <link rel="icon" href="/recalljpg.jpg" type="image/jpeg" />
     <link rel="shortcut icon" href="/recalljpg.jpg" type="image/jpeg" />
     <link rel="apple-touch-icon" href="/recalljpg.jpg" />
     <link rel="manifest" href="/manifest.json" />
+    <link rel="canonical" href="https://knoledgr.com/" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <title>Knowledgr - Knowledge-First Collaboration</title>
   </head>
