--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,6 +16,7 @@
     <meta name="twitter:title" content="Knoledgr | Knowledge-First Collaboration Platform" />
     <meta name="twitter:description" content="Knoledgr connects conversations, decisions, projects, and documents so teams keep context and move faster." />
     <meta name="twitter:image" content="/logo.png" />
+    <meta name="google-site-verification" content="pjB_xDThApaqQrN12ZqjRn7E6of2Eed2qqne1IX6aSE" />
     <meta name="apple-mobile-web-app-title" content="Knowledgr" />
     <link rel="icon" href="/recalljpg.jpg" type="image/jpeg" />
     <link rel="shortcut icon" href="/recalljpg.jpg" type="image/jpeg" />
