--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,6 +18,9 @@
     <meta name="twitter:image" content="/logo.png" />
     <meta name="google-site-verification" content="pjB_xDThApaqQrN12ZqjRn7E6of2Eed2qqne1IX6aSE" />
     <meta name="apple-mobile-web-app-title" content="Knowledgr" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
     <link rel="icon" href="/recalljpg.jpg" type="image/jpeg" />
     <link rel="shortcut icon" href="/recalljpg.jpg" type="image/jpeg" />
     <link rel="apple-touch-icon" href="/recalljpg.jpg" />
